--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
 		"@nestjs/typeorm": "^10.0.2",
 		"mysql2": "^3.9.0",
 		"reflect-metadata": "0.2.2",
-		"rxjs": "^7.8.1",
-		"typeorm": "^0.3.20"
+		"rxjs": "^7.8.1"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^10.0.0",
