--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: mysql:8
     container_name: mysql
     volumes:
-      - db:/var/lib/mysql
+      - db:/var/lib/mysqlwe
     ports:
       - 3308:3306
     environment:
@@ -28,7 +28,6 @@ services:
 networks:
   first-network:
     name: first-network
-    external: true
     driver: bridge
   
 volumes:
